fix weird nav anchor squashing bug

--- a/client/src/components/Nav/index.css
+++ b/client/src/components/Nav/index.css
@@ -9,7 +9,7 @@ nav ul {
 }
 
 nav a {
-    display: inline-flex;
+    display: flex;
     height: 100%;
     padding: 0 2em;
     text-transform: uppercase;
